--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/claim/list.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/claim/list.html
@@ -85,7 +85,7 @@
 				{data: "ERDAT", 		title: "[[#{HQPD_L_DOC_DATE}]]"},// Doc. Date
 				{data: "VBELN2", 		title: "[[#{HQPD_L_SALES_DOC_NO}]]", className: "link"},// Sales Doc. No.
 				{data: "T_NETWR", 		title: "[[#{HQPD_L_TOTAL_AMOUNT}]]", className: "right"},// Total Amount
-				{data: "WAERK", 		title: "[[#{HQPD_L_CURRENCY}]]"},// Curr.
+				{data: "WAERK", 		title: "[[#{HQPD_L_CURR}]]"},// Curr.
 				{data: "RFGSK_TX_T", 	title: "[[#{HQPD_L_PROCESS_RESULT}]]"},// Process Result						
 				{data: "RFGSK_TX_T1", 	title: "[[#{HQPD_L_RETURN_RESULT}]]"},// Return Status			
 				{data: "VBELN3", 		title: "[[#{HQPD_L_FINAL_DOC}]]"}// Final Document		
