--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/backorder/list.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/backorder/list.html
@@ -93,9 +93,9 @@
 				{data: "MATNR_SO", 		title: "[[#{HQPD_L_ORDER_PART_NO}]]"}, //Order Part No.
 				{data: "MATNR_SH", 		title: "[[#{HQPD_L_SUPPLY_PART_NO}]]"}, //Supply Part No
 				{data: "MAKTX", 		title: "[[#{HQPD_L_DESCRIPTION}]]"}, //Description
-				{data: "KWMENG_SO", 	title: "[[#{HQPD_L_ORDER_QTY}]]"}, //Order Qty
-				{data: "KWMENG_SH", 	title: "[[#{HQPD_L_SHIPMENT_COMPLETE_QTY}]]"}, //S.Completion Qty
-				{data: "KWMENG", 		title: "[[#{HQPD_L_BACKORDER_QTY}]]"}, //B/O Quantity
+				{data: "KWMENG_SO", 	title: "[[#{HQPD_L_ORDER_QTY}]]", className: "right"}, //Order Qty
+				{data: "KWMENG_SH", 	title: "[[#{HQPD_L_SHIPMENT_COMPLETE_QTY}]]", className: "right"}, //S.Completion Qty
+				{data: "KWMENG", 		title: "[[#{HQPD_L_BACKORDER_QTY}]]", className: "right"}, //B/O Quantity
 				{data: "VRKME", 		title: "[[#{HQPD_L_UOM}]]"}, //UoM,
 				{data: "PRETD",			title: "[[#{HQPD_L_ETD}]]"}, //ETD Comment
 				{data: "BSTKD", 		title: "[[#{HQPD_L_PO_NO}]]"}	//P.O. No.
