--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/quot/list.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/quot/list.html
@@ -66,7 +66,7 @@
 						<select class="custom-ui" id="pStatus" name="pStatus">
 							<option value="X"></option>
 							<option value="O" th:text="#{HQPD_L_OPEN}"></option>
-							<option value="C" th:text="#{	HQPD_L_CLOSE}"></option>
+							<option value="C" th:text="#{HQPD_L_CLOSE}"></option>
 						</select>
 					</div>	
 				</td>				
@@ -120,9 +120,9 @@ $(function(){
 			{data: "BSTKD", title: "[[#{HQPD_L_PO_NO}]]"},//P.O. No.
 			{data: "VBELN2", title: "[[#{HQPD_L_SALES_DOC_NO}]]", className: "link"},//Sales Doc. No.
 			{data: "ERDAT2", title: "[[#{HQPD_L_ORDER_DATE}]]"},//Create Date
-			{data: "COUNT", title: "[[#{HQPD_L_ITEM_ROWS}]]"},//Line Item
+			{data: "COUNT", title: "[[#{HQPD_L_ITEM_ROWS}]]", className: "right"},//Line Item
 			{data: "T_NETWR", title: "[[#{HQPD_L_ORDER_AMOUNT}]]", className: "right"},//Order Amt.
-			{data: "WAERK", title: "[[#{HQPD_L_CURRENCY}]]"},//Curr.
+			{data: "WAERK", title: "[[#{HQPD_L_CURR}]]"},//Curr.
 			{data: "RFGSK_TX", title: "[[#{	HQPD_L_STATUS}]]"}//Open Status
 		],
 		/*
