--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/status/view.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/status/view.html
@@ -55,12 +55,12 @@
 				{data: "MATNR_SO", 		title: "[[#{HQPD_L_ORDER_PART_NO}]]"},// Order Part No.
 				{data: "MATNR_SH", 		title: "[[#{HQPD_L_SUPPLY_PART_NO}]]"},// Supply Part No
 				{data: "MAKTX", 		title: "[[#{HQPD_L_DESCRIPTION}]]"},// Description
-				{data: "SO_QTY", 		title: "[[#{HQPD_L_ORDER_QTY}]]"},// Order Qty
-				{data: "RE_QTY", 		title: "[[#{HQPD_L_RESERVED_QTY}]]"},// Reserved Qty
-				{data: "PI_QTY", 		title: "[[#{HQPD_L_PACKED_QTY}]]"},// Packed Qty
-				{data: "IN_QTY", 		title: "[[#{HQPD_L_INVOICE_QTY}]]"},// Invoiced Qty
-				{data: "SH_QTY", 		title: "[[#{HQPD_L_SHIPMENT_COMPLETE_QTY}]]"},// S.Completion Qty
-				{data: "BO_QTY", 		title: "[[#{HQPD_L_BACKORDER_QTY}]]"},// B/O Qty
+				{data: "SO_QTY", 		title: "[[#{HQPD_L_ORDER_QTY}]]", className: "right"},// Order Qty
+				{data: "RE_QTY", 		title: "[[#{HQPD_L_RESERVED_QTY}]]", className: "right"},// Reserved Qty
+				{data: "PI_QTY", 		title: "[[#{HQPD_L_PACKED_QTY}]]", className: "right"},// Packed Qty
+				{data: "IN_QTY", 		title: "[[#{HQPD_L_INVOICE_QTY}]]", className: "right"},// Invoiced Qty
+				{data: "SH_QTY", 		title: "[[#{HQPD_L_SHIPMENT_COMPLETE_QTY}]]", className: "right"},// S.Completion Qty
+				{data: "BO_QTY", 		title: "[[#{HQPD_L_BACKORDER_QTY}]]", className: "right"},// B/O Qty
 				{data: "LST_ETD", 		title: "[[#{HQPD_L_UPDATED_ETD}]]"}// Updated ETD
 			],		
 			ajax: {
